--- a/index.org
+++ b/index.org
@@ -19,6 +19,8 @@ Desc: This one was created in a couple of hours using some old trim scrap peices
 * Workbench
 Date: 3 Jan 2023
 
+[[file:./pics/workbench.jpg]]
+
 Desc: The worktop is created from an MDF panel with 20mm holes at 100CTS to suit bench dogs or clamps. It is also hollow under to allow easy clamping from most locations. The legs came from an old sleeper that was planed down; timber type unknown but has a reddish tint. The beams were planed down from some old 90x45 pine lengths. Legs and beams were joined using dowels and finished with clear polyurethane.
 
 * Entryway bench
@@ -31,9 +33,19 @@ Desc: Built to suit the Ikea entryway shelving the 18mm Red Oak panel was cut to
 * Plant ladder
 Date: 18 Dec 2022
 
+[[file:./pics/plantladder.jpg]]
+
 Desc: This simple job was created from two square pine lengths and a dowel. The drill press was used to cut inserts for the dowel lengths and the ladder was assembled, no glue or fasteners.
 
 * Builtin workbench
 Date: 11 Dec 2022
 
+[[file:./pics/builtinbench.jpg]]
+
 Desc: The garage builtin workbench was built using spoted gum panels (cheapest available panel), MDF board coated with BIN sealer for the supports, and standard pegboard panels. The bench panels are fixed to the studs using steel brackets. In hind sight I would've built a proper support rather than the MDF and focued on better quality levelling.
+
+* Photo processing                                                 :noexport:
+#+begin_src eshell
+for f in *.jpg {convert $f -resize 25% $(file-name-sans-extension f)-small.jpg}
+#+end_src
+
