Fix typo: nail->staple

--- a/index.org
+++ b/index.org
@@ -14,7 +14,7 @@ Date: 6 Jan 2023
 
 https://live.staticflickr.com/65535/52613710774_7df26ecaa6_k.jpg
 
-Desc: This one was created in a couple of hours using some old trim scrap peices from the garage. They were sanded down, cut to size and then dowelled together (rather than a miter join). The fabric was then installed and tensioned using a nail gun.
+Desc: This one was created in a couple of hours using some old trim scrap peices from the garage. They were sanded down, cut to size and then dowelled together (rather than a miter join). The fabric was then installed and tensioned using a staple gun.
 
 * Workbench
 Date: 3 Jan 2023
